# server

./: .gitignore  README.md  alembic.ini  config.env  lifecourse.drawio  main.py  pyproject.toml  sql_app.db
.github/workflows/: linter.yml
migrations/: env.py
migrations/versions/: 1955a973cfe7_city_add.py  4972cfcba0b3_add_role.py  5e02cb10127f_create_db.py  8444d58c7d5c_add_default_value_for_score.py  85997ea51a08_full_db.py  aba4beed9d6b_city_add.py  e89c86ae7880_add_city_to_company.py
src/: database.py  main.py  settings.py
src/auth/: auth.py  manager.py  model.py  models.py  router.py  schema.py  schemas.py  token.py  utils.py
src/company/: crud.py  models.py  router.py  schemas.py
src/feed/: crud.py  models.py  router.py  schemas.py
src/users/: crud.py  models.py  router.py  schemas.py
