[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Leonid-poc <legeorg2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
aiosqlite = "^0.20.0"
databases = "^0.9.0"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
