[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Evgeniy Perov <evgeniy.perov.05@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
aiosqlite = "^0.20.0"
databases = "^0.9.0"
bcrypt = "4.0.1"
pyjwt = "^2.8.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
